--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -42,7 +42,7 @@
         android:layout_gravity="bottom"
         android:background="@color/white"
         android:gravity="center"
-        android:text="NO PERSON"
+        android:text="NO STUDENT"
         android:textColor="@color/black" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
